--- a/app/views/barsearches/index.html.erb
+++ b/app/views/barsearches/index.html.erb
@@ -1,6 +1,8 @@
 <div class="jumbotron">
     <h1>BUSY BAR</h1>
+
     <%= form_tag(results_path) %>
+    <%= collection_select(Location, :bar, Location.all, :near, :near, :include_blank => "Please select a location") %>
       <%= submit_tag 'Find Bars!' %>
 </div>
 
